Updated .gitignore Removed console logs Fixed indentation

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DB_CONNECTION=mongodb+srv://lachlan:pass@test.wdram.mongodb.net/test?retryWrites=true&w=majority
+DB_CONNECTION=mongodb+srv://lachlan:passhacks999@test.wdram.mongodb.net/test?retryWrites=true&w=majority
